--- a/index.html
+++ b/index.html
@@ -9,52 +9,21 @@
   </head>
 
   <body>
-          <a-scene mindar-image="imageTargetSrc: https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/targets3.mind?v=1673674247050; maxTrack: 5; filterMinCF:0.001; filterBeta: 10" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+          <a-scene mindar-image="imageTargetSrc: https://github.com/muhdkhairul/2108ArtBook/raw/main/targets2.mind; maxTrack: 1; filterMinCF:0.001; filterBeta: 10" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
             <a-assets>
-              <a-asset-item id="welcomeModel" src="https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/pictureframeglb.glb?v=1673520661679"></a-asset-item>
-              <a-asset-item id="frameModel" src="https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/bearglb.glb?v=1673582113579"></a-asset-item>
-              <a-asset-item id="tableModel" src="https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/tableglb.glb?v=1673581410649"></a-asset-item>
-              <a-asset-item id="chairModel" src="https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/armchairglb.glb?v=1673581410035"></a-asset-item>
-              <a-asset-item id="bedModel" src="https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/bedglb.glb?v=1673581411510"></a-asset-item>
+              <a-asset-item id="futuresg" src="https://github.com/muhdkhairul/2108ArtBook/raw/main/1.glb"></a-asset-item>
             </a-assets>
       
             <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       
             <a-entity mindar-image-target="targetIndex: 0">
-              <a-gltf-model rotation="90 0 0 " position="0 -0.5 0" scale="0.007 0.007 0.007" src="#welcomeModel" animation-mixer>
+              <a-gltf-model rotation="90 0 0 " position="0 -0.5 0" scale="0.007 0.007 0.007" src="#futuresg" animation-mixer>
             </a-entity>
 
             <a-entity mindar-image-target="targetIndex: 1">
-              <a-gltf-model rotation="270 0 0 " position="0 -0.25 0" scale="0.03 0.03 0.03" src="#frameModel" animation-mixer>
+              <a-gltf-model rotation="270 0 0 " position="0 -0.25 0" scale="0.03 0.03 0.03" src="#futuresg" animation-mixer>
             </a-entity>
 
-            <a-entity mindar-image-target="targetIndex: 2">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.004 0.004 0.004" src="#tableModel" animation-mixer>
-            </a-entity>
-
-            <a-entity mindar-image-target="targetIndex: 3">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.0012 0.0012 0.0012" src="#chairModel" animation-mixer>
-            </a-entity>
-
-            <a-entity mindar-image-target="targetIndex: 4">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.0012 0.0012 0.0012" src="#bedModel" animation-mixer>
-            </a-entity>
-
-
-
-
-
-            <a-entity mindar-image-target="targetIndex: 5">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.004 0.004 0.004" src="#tableModel" animation-mixer>
-            </a-entity>
-
-            <a-entity mindar-image-target="targetIndex: 6">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.0012 0.0012 0.0012" src="#chairModel" animation-mixer>
-            </a-entity>
-
-            <a-entity mindar-image-target="targetIndex: 7">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.25 0" scale="0.0012 0.0012 0.0012" src="#bedModel" animation-mixer>
-            </a-entity>
 
 
       <style>
