--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
           <a-scene mindar-image="imageTargetSrc: https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/targets3.mind?v=1673674247050; maxTrack: 1; filterMinCF:0.001; filterBeta: 10" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
             <a-assets>
-              <a-asset-item id="futuresg" src="https://github.com/muhdkhairul/2108ArtBook/raw/main/1.glb"></a-asset-item>
+              <a-asset-item id="futuresg" src="https://cdn.glitch.global/b08091d8-2ebd-4277-9f0e-5d160ad8d8bb/pictureframeglb.glb?v=1673520661679"></a-asset-item>
             </a-assets>
       
             <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
