--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       
             <a-entity mindar-image-target="targetIndex: 0">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.5 0" scale="0.01 0.01 0.01" src="#futuresg" animation-mixer>
+              <a-gltf-model rotation="0 0 0 " position="0 -0.5 0" scale="0.01 0.01 0.01" src="#futuresg">
             </a-entity>
 
             <a-entity mindar-image-target="targetIndex: 1">
-              <a-gltf-model rotation="0 0 0 " position="0 -0.5 0" scale="0.01 0.01 0.01" src="#futuresg" animation-mixer>
+              <a-gltf-model rotation="0 0 0 " position="0 -0.5 0" scale="0.01 0.01 0.01" src="#futuresg">
             </a-entity>
 
 
